<resources>
    <string name="app_name">Smart Track</string>
    <string name="back">back</string>
    <string name="shape">shape</string>
    <string name="student">Student Login</string>
    <string name="lecturer">Lecturer Login</string>
    <string name="welcome">Welcome</string>
    <string name="stud_login">stud_login</string>
    <string name="lect_login">lect_login</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="we_pursue_a_relaxed_gaming_experience">We pursue a relaxed gaming experience</string>
    <string name="login">login</string>
    <string name="register_text">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="year">Year</string>
    <string name="Section">Section</string>
    <string name="group">Group</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here_to_login">Click Here to Login</string>
    <string name="login_back">login_back</string>
    <string name="login_here">Login</string>
    <string name="name2">Name</string>
    <string name="backtopage">backtopage</string>
    <string name="Dept">Dept</string>
    <string name="USN">USN</string>
    <string name="smart_track">Smart Track</string>
    <string name="usn">USN</string>
    <string name="dept">DEPT</string>
    <string name="year1">YEAR</string>
    <string name="section2">SECTION</string>
    <string name="add_cie_marks_details">Add CIE-1 Marks Details</string>
    <string name="max">Max</string>
    <string name="sem">Marks</string>
    <string name="max2">Max</string>
    <string name="select_an_option">Select an option:</string>
    <string name="enter_text">Enter text</string>
    <string name="basics_of_programming_n_22mca110">Basics of Programming\n (22MCA110)</string>
    <string name="computer_networks_n_22mca14">Computer Networks\n(22MCA14)</string>
    <string name="computer_networks_lab_n_22mca17">Computer Networks Lab\n(22MCA17)</string>
    <string name="data_structures_nalgorithms_lab_22mca16"><![CDATA[Data Structures & \nAlgorithms Lab(22MCA16)]]></string>
    <string name="mathematical_foundation_for_c_a_22mca11">Mathematical Foundation for C.A(22MCA11)</string>
    <string name="research_methodology_ipr_22mca16"><![CDATA[Research Methodology & IPR(22MCA16)]]></string>
    <string name="operating_system_concepts_22mca12">Operating System Concepts(22MCA12)</string>
    <string name="design_analysis_of_algorithms_22mca15"><![CDATA[Design & Analysis of Algorithms(22MCA15)]]></string>
    <string name="data_structures_n_22mca13">Data Structures\n(22MCA13)</string>
    <string name="add_marks">ADD MARKS</string>
    <string name="cie_1_marks">CIE - 1 Marks</string>
    <string name="usn_spinner_content_description">us</string>
    <string name="cie2">Add CIE-2 Marks Details</string>
    <string name="cie3">Add CIE-3 Marks Details</string>

    <array name="usn_list">
        <item>22MC01</item>
        <item>22MC02</item>
        <item>22MC03</item>
        <item>22MC04</item>
        <item>22MC05</item>
        <item>22MC06</item>
        <item>22MC07</item>
        <item>22MC08</item>
        <item>22MC09</item>
        <item>22MC010</item>
        <item>22MC011</item>
        <item>22MC012</item>
        <item>22MC013</item>
        <item>22MC014</item>
        <item>22MC015</item>
        <item>22MC016</item>
        <item>22MC017</item>
        <item>22MC018</item>
        <item>22MC019</item>
        <item>22MC020</item>
        <item>22MC021</item>
        <item>22MC022</item>
        <item>22MC023</item>
        <item>22MC024</item>
        <item>22MC025</item>
        <item>22MC026</item>
        <item>22MC027</item>
        <item>22MC028</item>
        <item>22MC029</item>
        <item>22MC030</item>
        <item>22MC031</item>
        <item>22MC032</item>
        <item>22MC033</item>
        <item>22MC034</item>
        <item>22MC035</item>
        <item>22MC036</item>
        <item>22MC037</item>
        <item>22MC038</item>
        <item>22MC039</item>
        <item>22MC040</item>
        <item>22MC041</item>
        <item>22MC042</item>
        <item>22MC043</item>
        <item>22MC044</item>
        <item>22MC045</item>
        <item>22MC046</item>
        <item>22MC047</item>
        <item>22MC048</item>
        <item>22MC049</item>
        <item>22MC050</item>
        <item>22MC051</item>
        <item>22MC052</item>
        <item>22MC053</item>
        <item>22MC054</item>
        <item>22MC055</item>
        <item>22MC056</item>
        <item>22MC057</item>
        <item>22MC058</item>
        <item>22MC059</item>
        <item>22MC060</item>
    </array>
</resources>