<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/backcolor"
            android:contentDescription="@string/back" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back"
            android:contentDescription="@string/back" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageButton
            android:id="@+id/imgbtn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_keyboard_arrow"
            android:contentDescription="@string/backtopage" />

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/gotham"
            android:gravity="center"
            android:shadowColor="#57000000"
            android:text="@string/login_here"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
             />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/edlemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_extrabold"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="@color/color"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/edlpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_extrabold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/color"
                android:textSize="18sp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_signin"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/gotham"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>