<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register_page">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/backcolor"
            android:contentDescription="@string/back" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back"
            android:contentDescription="@string/back" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageButton
                android:id="@+id/imgbtn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_keyboard_arrow"
                android:contentDescription="@string/backtopage" />

            <TextView
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/gotham"
                android:gravity="center"
                android:shadowColor="#57000000"
                android:text="@string/register_text"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_extrabold"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/color"
                    android:textSize="18sp"
                    tools:ignore="InvalidId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_extrabold"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="33.3"
                    android:textColorHint="#000000">

                    <EditText
                        android:id="@+id/eddept"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_extrabold"
                        android:hint="@string/Dept"
                        android:inputType="text"
                        android:textColor="@color/color"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="33.3"
                    android:textColorHint="#000000">

                    <EditText
                        android:id="@+id/edyear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_extrabold"
                        android:hint="@string/year"
                        android:inputType="text"
                        android:textColor="@color/color"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="33.3"
                    android:textColorHint="#000000">

                    <EditText
                        android:id="@+id/edSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_extrabold"
                        android:hint="@string/Section"
                        android:inputType="text"
                        android:textColor="@color/color"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_extrabold"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/color"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/edcon_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_extrabold"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/gotham"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/already_have"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gilroy_extrabold"
                android:gravity="center"
                android:shadowColor="#57000000"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/login_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/gilroy_extrabold"
                android:gravity="center"
                android:shadowColor="#57000000"
                android:text="@string/click_here_to_login"
                android:textAlignment="center"
                android:textColor="#FFFF00"
                android:textSize="20sp"
                android:textStyle="bold"
                />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>